--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -893,6 +893,9 @@
     <ClCompile Include="UVa\11600\11689.cpp">
       <Filter>UVa\11600</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11900\11936.cpp">
+      <Filter>UVa\11900</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
