--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -896,6 +896,9 @@
     <ClCompile Include="UVa\11900\11936.cpp">
       <Filter>UVa\11900</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10600\10699.cpp">
+      <Filter>UVa\10600</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
