--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -902,6 +902,9 @@
     <ClCompile Include="UVa\400\438.cpp">
       <Filter>UVa\400\430</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\100\100.cpp">
+      <Filter>UVa\100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
