--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -905,6 +905,9 @@
     <ClCompile Include="UVa\100\100.cpp">
       <Filter>UVa\100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\400\412.cpp">
+      <Filter>UVa\400\410</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
