--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -908,6 +908,9 @@
     <ClCompile Include="UVa\400\412.cpp">
       <Filter>UVa\400\410</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10000\10099.cpp">
+      <Filter>UVa\10000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
