--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -911,6 +911,9 @@
     <ClCompile Include="UVa\10000\10099.cpp">
       <Filter>UVa\10000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\300\386.cpp">
+      <Filter>UVa\300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
