--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -914,6 +914,9 @@
     <ClCompile Include="UVa\300\386.cpp">
       <Filter>UVa\300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11100\11192.cpp">
+      <Filter>UVa\11100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
