--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -917,6 +917,9 @@
     <ClCompile Include="UVa\11100\11192.cpp">
       <Filter>UVa\11100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11900\11988.cpp">
+      <Filter>UVa\11900</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
