--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -923,6 +923,9 @@
     <ClCompile Include="UVa\700\725.cpp">
       <Filter>UVa\700</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10800\10878.cpp">
+      <Filter>UVa\10800</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
