--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -938,6 +938,9 @@
     <ClCompile Include="UVa\400\443.cpp">
       <Filter>UVa\400\430</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11900\11995.cpp">
+      <Filter>UVa\11900</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
