--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -962,6 +962,9 @@
     <ClCompile Include="UVa\400\417.cpp">
       <Filter>UVa\400\410</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10000\10048.cpp">
+      <Filter>UVa\10000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
