--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -965,6 +965,9 @@
     <ClCompile Include="UVa\10000\10048.cpp">
       <Filter>UVa\10000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10000\10098.cpp">
+      <Filter>UVa\10000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
