--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -968,6 +968,9 @@
     <ClCompile Include="UVa\10000\10098.cpp">
       <Filter>UVa\10000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10900\10954.cpp">
+      <Filter>UVa\10900</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
