--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -971,6 +971,9 @@
     <ClCompile Include="UVa\10900\10954.cpp">
       <Filter>UVa\10900</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10500\10591.cpp">
+      <Filter>UVa\10500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
