--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -974,6 +974,9 @@
     <ClCompile Include="UVa\10500\10591.cpp">
       <Filter>UVa\10500</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11800\11849.cpp">
+      <Filter>UVa\11800</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
