--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -977,6 +977,9 @@
     <ClCompile Include="UVa\11800\11849.cpp">
       <Filter>UVa\11800</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10300\10361.cpp">
+      <Filter>UVa\10300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
