--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -980,6 +980,9 @@
     <ClCompile Include="UVa\10300\10361.cpp">
       <Filter>UVa\10300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\600\612.cpp">
+      <Filter>UVa\600</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
