--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -995,6 +995,9 @@
     <ClCompile Include="UVa\10700\10789.cpp">
       <Filter>UVa\10700</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\600\640.cpp">
+      <Filter>UVa\600</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
