--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -998,6 +998,9 @@
     <ClCompile Include="UVa\600\640.cpp">
       <Filter>UVa\600</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11400\11455.cpp">
+      <Filter>UVa\11400</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
