--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1001,6 +1001,9 @@
     <ClCompile Include="UVa\11400\11455.cpp">
       <Filter>UVa\11400</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11700\11723.cpp">
+      <Filter>UVa\11700</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
