--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1004,6 +1004,9 @@
     <ClCompile Include="UVa\11700\11723.cpp">
       <Filter>UVa\11700</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\700\729.cpp">
+      <Filter>UVa\700</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
