AC, fixed LIS comment.

--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1010,6 +1010,9 @@
     <ClCompile Include="UVa\300\336.cpp">
       <Filter>UVa\300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\400\481.cpp">
+      <Filter>UVa\400\480</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
