--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1025,6 +1025,9 @@
     <ClCompile Include="UVa\10700\10773.cpp">
       <Filter>UVa\10700</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10400\10450.cpp">
+      <Filter>UVa\10400</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
