--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1031,6 +1031,9 @@
     <ClCompile Include="UVa\700\750.cpp">
       <Filter>UVa\700</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10100\10170.cpp">
+      <Filter>UVa\10100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
