--- a/Contest.vcxproj
+++ b/Contest.vcxproj
@@ -560,6 +560,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="UVa\10900\10976.cpp" />
     <ClCompile Include="UVa\11000\11044.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
@@ -1064,6 +1065,7 @@
     <ClInclude Include="Library\combinatorics.h" />
     <ClInclude Include="Library\dp_algs.h" />
     <ClInclude Include="Library\floodfill.h" />
+    <ClInclude Include="Library\fraction.h" />
     <ClInclude Include="Library\graph_util.h" />
     <ClInclude Include="Library\header.h" />
     <ClInclude Include="Library\matching.h" />
