--- a/Contest.vcxproj
+++ b/Contest.vcxproj
@@ -560,7 +560,10 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="UVa\10900\10976.cpp" />
+    <ClCompile Include="UVa\10900\10976.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="UVa\11000\11044.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
@@ -1080,7 +1083,6 @@
     <ClInclude Include="Library\old\dp_algs.h" />
     <ClInclude Include="Library\old\eularian.h" />
     <ClInclude Include="Library\old\floodfill.h" />
-    <ClInclude Include="Library\old\fraction.h" />
     <ClInclude Include="Library\old\graham.h" />
     <ClInclude Include="Library\old\graph.h" />
     <ClInclude Include="Library\old\graph_util.h" />
