--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1037,6 +1037,9 @@
     <ClCompile Include="UVa\10900\10976.cpp">
       <Filter>UVa\10900</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10000\10034.cpp">
+      <Filter>UVa\10000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
@@ -1173,6 +1176,9 @@
     </ClInclude>
     <ClInclude Include="Library\fraction.h">
       <Filter>Library\Mathematics</Filter>
+    </ClInclude>
+    <ClInclude Include="Library\spanning_tree.h">
+      <Filter>Library\Graph Theory</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
