--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1040,6 +1040,9 @@
     <ClCompile Include="UVa\10000\10034.cpp">
       <Filter>UVa\10000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10300\10338.cpp">
+      <Filter>UVa\10300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
