--- a/Contest.vcxproj
+++ b/Contest.vcxproj
@@ -440,6 +440,10 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="UVa\10300\10334.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="UVa\10300\10338.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
@@ -1139,6 +1143,7 @@
     <None Include=".gitignore" />
     <None Include="TopCoder\greed.conf" />
     <None Include="UVa\10100\10106.py" />
+    <None Include="UVa\10300\10334.py" />
     <None Include="UVa\10500\10579.py" />
     <None Include="UVa\400\424.py" />
     <None Include="UVa\400\485.py" />
