--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1043,6 +1043,9 @@
     <ClCompile Include="UVa\10300\10338.cpp">
       <Filter>UVa\10300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10300\10334.cpp">
+      <Filter>UVa\10300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
@@ -1255,6 +1258,9 @@
     </None>
     <None Include="UVa\400\495.py">
       <Filter>UVa\400\490</Filter>
+    </None>
+    <None Include="UVa\10300\10334.py">
+      <Filter>UVa\10300</Filter>
     </None>
   </ItemGroup>
 </Project>
